# ml-crypto-forecast

./: pyproject.toml  requirements.txt  setup.py
api/: parameters.py
jobs/: parameters.py
src/crypto_modules/: Backtesting.py
src/utils/: FileHandle.py
