[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_modules"
version = "0.1.0"
description = "Machine Learning for crypto forecast"
authors = [
  { name = "Allysson Macedo", email = "allyssonvsmacedo@gmail.com" }
]
dependencies = [
  "asttokens==3.0.0",
  "beautifulsoup4==4.13.4",
  "certifi==2025.6.15",
  "cffi==1.17.1",
  "charset-normalizer==3.4.2",
  "colorama==0.4.6",
  "comm==0.2.2",
  "contourpy==1.3.2",
  "curl_cffi==0.11.3",
  "cycler==0.12.1",
  "dateparser==1.2.1",
  "decorator==5.2.1",
  "dill==0.4.0",
  "executing==2.2.0",
  "fonttools==4.58.4",
  "frozendict==2.4.6",
  "idna==3.10",
  "imageio==2.37.0",
  "imbalanced-learn==0.13.0",
  "ipython==9.3.0",
  "ipython_pygments_lexers==1.1.1",
  "ipywidgets==8.1.7",
  "jedi==0.19.2",
  "joblib==1.5.1",
  "jupyterlab_widgets==3.0.15",
  "kiwisolver==1.4.8",
  "llvmlite==0.44.0",
  "matplotlib==3.10.3",
  "matplotlib-inline==0.1.7",
  "multitasking==0.0.11",
  "mypy_extensions==1.1.0",
  "numba==0.61.2",
  "numpy==2.2.6",
  "packaging==25.0",
  "pandas==2.3.0",
  "pandas_ta==0.3.14b0",
  "parso==0.8.4",
  "peewee==3.18.1",
  "pillow==11.2.1",
  "platformdirs==4.3.8",
  "plotly==5.24.1",
  "prompt_toolkit==3.0.51",
  "protobuf==6.31.1",
  "pure_eval==0.2.3",
  "pyarrow==20.0.0",
  "pycparser==2.22",
  "Pygments==2.19.1",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "regex==2024.11.6",
  "requests==2.32.4",
  "schedule==1.2.2",
  "scikit-learn==1.6.1",
  "scipy==1.15.3",
  "six==1.17.0",
  "sklearn-compat==0.1.3",
  "soupsieve==2.7",
  "stack-data==0.6.3",
  "tenacity==9.1.2",
  "threadpoolctl==3.6.0",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "typing_extensions==4.14.0",
  "tzdata==2025.2",
  "tzlocal==5.3.1",
  "urllib3==2.4.0",
  "vectorbt==0.27.3",
  "wcwidth==0.2.13",
  "websockets==15.0.1",
  "widgetsnbextension==4.0.14",
  "xgboost==3.0.2",
  "yfinance==0.2.63"
]
requires-python = ">=3.10"
